# Computer-Graphics-Assignment-2

Lab 7/: CMakeLists.txt  CMakeLists.txt.user.f4a3c08.4.8-pre1  Cube.cpp  Cylinder.cpp  Cylinder.h  Plane.cpp  RayTracer.cpp  cylinder.h
Lab 8/: Plane.cpp
Lab_7/: RayTracer.cpp
build-Lab-7-Desktop-Default/: CMakeCache.txt  COPYONLY  Makefile  RayTracer.out  assignment2.cbp  cmake_install.cmake  itw21_assignment2.cbp  lab7.cbp
build-Lab_7-Desktop-Default/: CMakeCache.txt  Makefile  RayTracer.out  cmake_install.cmake  lab7.cbp
build-itw21_assignment2-Desktop-Default/: .ninja_deps  .ninja_log  CMakeCache.txt  RayTracer.out  build.ninja  cmake_install.cmake  itw21_assignment2.cbp  rules.ninja
itw21_assignment2/: CMakeLists.txt  CMakeLists.txt.user.6371bb6.21  ChequeredPlane.cpp  Cylinder.cpp  Cylinder.h  RayTracer.cpp  Sphere.cpp  Sphere.h  Tetrahedron.cpp  Tetrahedron.h  build
